# RTRS

./: Cargo.toml  LICENSE  README.md  build.rs  flake.nix  rust-toolchain.toml
rt_shader/: Cargo.toml
rt_shader/src/: lib.rs
src/: camera.rs  color.rs  context.rs  hittable.rs  intersection.rs  main.rs  primitives.rs  ray.rs  render.rs  scene.rs  viewport.rs
src/context/: vulkan_context.rs
src/primitives/: sphere.rs
